<resources>
    <string name="app_name">SustainabilityStoplight</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="q1">How often are the showers in your home used daily?\n</string>
    <string name="q2">How often does your family use a washing machine weekly?\n</string>
    <string name="q3">How often do you turn off the lights when you leave a room?\n</string>

    <string name="q4">Do you print out reading material?\n</string>
    <string name="max">Every time</string>
    <string name="med">Sometimes</string>
    <string name="min">Never</string>

    <string name="hello_world">XMLPullParser Activity</string>
    <string name="menu_settings">Settings</string>
    <string name="appname">Sustainability Stoplight</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="nameWithSpaces">The Sustainability Stoplight</string>
    >>>>>>> 276a40d4b02144cb41ba532d6fc3083d0f0668e4
</resources>
